--- a/assignments/assignment-3/styles.css
+++ b/assignments/assignment-3/styles.css
@@ -1,39 +1,65 @@
+:root  {
+    --primary: rgb(51, 51, 55);
+    --secondary: rgb(28, 0, 188);
+    --gradient: linear-gradient(135deg, var(var(--primary), var(var(--secondary))));
+    --text: rgb(80, 162, 255);
+    --shadow: 0 10px 30px rgba(48, 45, 105, 0.2);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+html {
+    background-color: rgb(88, 88, 88);
+}
 
+h2 {
+    color: var(--secondary);
+}
+
+h3 {
+    color: var(--secondary);
+}
 
 .heading {
-    background-color: rgb(120, 147, 152);
+    background-color: var(--primary);
     padding: 25px;
     position: static;
     justify-content: space-between;
     display: flex;
     top: 0;
     z-index: 100;
+    border-radius: 2px;
 
 }
 
-.heading .title {
-    color: rgb(0, 0, 0);
+.title {
+    color: var(--text);
 
 }
 
 .heading .nav-links  {
     display: flex;
     gap: 20px;
+    
 
 }
 
 .nav-links a {
-    color: white;
+    color: var(--text);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .nav-links a:hover {
-    color: var(--primary-color);
+    color: white;
+}
+
+.contact  {
+    width: 50px;
+    pad: 20px;
+    border: grey;
 }
