--- a/assignments/assignment-3/styles.css
+++ b/assignments/assignment-3/styles.css
@@ -1,8 +1,9 @@
 :root  {
     --primary: rgb(51, 51, 55);
-    --secondary: rgb(28, 0, 188);
+    --secondary: rgb(5, 137, 181);
     --gradient: linear-gradient(135deg, var(var(--primary), var(var(--secondary))));
-    --text: rgb(80, 162, 255);
+    --heading: rgb(80, 162, 255);
+    --paragraph: rgb(160, 205, 255);
     --shadow: 0 10px 30px rgba(48, 45, 105, 0.2);
 }
 
@@ -13,53 +14,76 @@
 }
 
 html {
-    background-color: rgb(88, 88, 88);
+    background-color: rgb(62, 62, 62);
 }
 
-h2 {
-    color: var(--secondary);
+h1, h2, h3, td, th, p ,li{
+    color: var(--heading);
 }
 
-h3 {
-    color: var(--secondary);
+td, p, li, h4 {
+    color: var(--paragraph);
 }
 
-.heading {
-    background-color: var(--primary);
-    padding: 25px;
-    position: static;
-    justify-content: space-between;
-    display: flex;
-    top: 0;
-    z-index: 100;
-    border-radius: 2px;
-
+audio {
+    display: none;
 }
 
-.title {
-    color: var(--text);
-
-}
-
-.heading .nav-links  {
-    display: flex;
-    gap: 20px;
-    
-
-}
-
-.nav-links a {
-    color: var(--text);
+a {
+    color: var(--paragraph);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
-.nav-links a:hover {
+a:hover {
     color: white;
 }
 
+.heading {
+    background-color: var(--primary);
+    padding: 40px;
+    position: relative;
+    justify-content: space-between;
+    display: flex;
+    top: 0;
+    z-index: 100;
+}
+
+.nav-links  {
+    display: flex;
+    gap: 20px;
+}
+
+.nav-links a {
+    color: var(--heading);
+}
+
+
+
+
+
 .contact  {
-    width: 50px;
-    pad: 20px;
-    border: grey;
+    display: block;
+    width: 100px;
+    padding: 5px;
+    border: 2px ;
+    background-color: var(--secondary);
+    border-radius: 30px;
+}
+
+.profile-links {
+    color: var(--paragraph);
+}
+
+.aboutme {
+    flex-wrap: wrap;
+    display: flex; 
+    justify-content: space-around;
+    text-align: left;
+    
+}
+
+.aboutmeh3 {
+
+   margin-bottom: 10px;
 }
