--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -13,22 +13,33 @@
     box-sizing: border-box;
 }
 
+/*Background Color*/
 html {
     background-color: rgb(62, 62, 62);
 }
 
+/*Default cusomization*/
 h1, h2, h3, td, th, p ,li{
     color: var(--heading);
 }
 
-td, p, li, h4 {
+td, p, li, h4 {    
     color: var(--paragraph);
+    border-width: 60px;
 }
 
+section {
+    padding: calc(var(10px * 2));
+    margin: 30px ;
+}
+
+/*Audio Display */
 audio {
     display: none;
 }
 
+
+/*Anchor tags and Hover effects*/
 a {
     color: var(--paragraph);
     text-decoration: none;
@@ -39,6 +50,7 @@ a:hover {
     color: white;
 }
 
+/*Top Page heading*/
 .heading {
     background-color: var(--primary);
     padding: 40px;
@@ -49,6 +61,7 @@ a:hover {
     z-index: 100;
 }
 
+/*Navigation Links*/
 .nav-links  {
     display: flex;
     gap: 20px;
@@ -58,16 +71,33 @@ a:hover {
     color: var(--heading);
 }
 
+/*Flexing Defaults*/
+.center {
+    display: flex;
+    justify-content: center;
+}
 
+/*Project Cards*/
 
+.project-grid {
+    display: flex;
+    flex-wrap: wrap;
 
+}
+
+.project-card {
+    flex: 1 1 300px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
 
 .contact  {
     display: block;
     width: 100px;
     padding: 5px;
     border: 2px ;
-    background-color: var(--secondary);
+    background-color: rgb(40, 40, 40);
     border-radius: 30px;
 }
 
@@ -83,7 +113,21 @@ a:hover {
     
 }
 
+/*Experience*/
+.experience {
+    display: flex;
+    justify-content: space-around;
+    padding: 60px;
+}
+
 .aboutmeh3 {
 
    margin-bottom: 10px;
+}
+
+/*References*/
+.reference {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
 }
