updated changes of submission and name changes

--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -129,5 +129,5 @@ a:hover {
 .reference {
     display: flex;
     flex-wrap: wrap;
-    align-content: space-around;
+    align-content: space-arounds;
 }
