--- a/assignments/assignment-4/styles/calculator.css
+++ b/assignments/assignment-4/styles/calculator.css
@@ -8,6 +8,12 @@ body {
     background-color: black;
     color: white;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 #calculator {
     margin: auto;
     display: grid;
